--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  max-width: 1024px;
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(circle, rgb(58, 67, 84), black 65%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.image {
+  position: absolute;
+  z-index: 1;
+}
+
+.image > img {
+  width: 100%;
+  height: auto;
+}
+
+.top {
+  top: 0;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+/* About me */
+.about-me {
+  position: absolute;
+  color: goldenrod;
+  z-index: 2;
+}
+
+/* Plant animations */
+.plant-container {
+  display: inline-block;
+  overflow: hidden;
+}
+
+.plant {
+  animation: wind 4s infinite alternate ease-in-out;
+  will-change: transform;
+}
+
+@keyframes wind {
+  0%,
+  100% {
+    transform: rotate(0) scale(1);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: rotate(3deg) scale(1.02);
   }
 }
