--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,24 @@
 .page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
   background-color: black;
 }
 
 .container {
-  max-width: 1024px;
-  width: 100vw;
+  margin: auto;
+  width: min(100vw, calc(100vh / 1.5));
   height: 100vh;
-  background: radial-gradient(circle, rgb(58, 67, 84), black 65%);
+  background: radial-gradient(circle, rgb(58, 67, 84), black 50%);
 }
 
 .image {
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 1;
 }
 
 .image > img {
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: min(100vw, calc(100vh / 1.5));
 }
 
 .top {
@@ -37,7 +33,22 @@
 .about-me {
   position: absolute;
   color: goldenrod;
+  outline: 2px solid goldenrod;
   z-index: 2;
+  padding: 20px;
+}
+
+.name {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.line {
+  display: flex;
+  margin-bottom: 10px;
+}
+.line > svg {
+  margin-right: 10px;
 }
 
 /* Plant animations */
@@ -47,16 +58,71 @@
 }
 
 .plant {
-  animation: wind 4s infinite alternate ease-in-out;
   will-change: transform;
 }
 
-@keyframes wind {
-  0%,
-  100% {
-    transform: rotate(0) scale(1);
+@media only screen and (max-width: 600px) {
+  .about-me {
+    top: 35%;
+    left: 22%;
   }
-  50% {
-    transform: rotate(3deg) scale(1.02);
+  .name {
+    font-size: 24px;
   }
+  .line {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .about-me {
+    top: 35%;
+    left: 22%;
+  }
+  .name {
+    font-size: 24px;
+  }
+  .line {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .about-me {
+    top: 10%;
+    left: 45%;
+  }
+  .name {
+    font-size: 42px;
+  }
+  .line {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .about-me {
+    top: 15%;
+    left: 50%;
+  }
+  .name {
+    font-size: 42px;
+  }
+  .line {
+    font-size: 20px;
+  }
+}
+
+@font-face {
+  font-family: 'TheDarkestPearl';
+  src: url(./fonts/TheDarkestPearl.ttf) format('truetype');
+}
+
+html * {
+  font-family: 'TheDarkestPearl';
+}
+
+a {
+  color: goldenrod;
+  text-decoration: none;
 }
