--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
   color: #ba8003;
   outline: 2px solid #ba8003;
   z-index: 2;
-  padding: 20px;
+  padding: 10px;
   backdrop-filter: blur(5px);
   left: 50%;
   transform: translateX(-50%);
@@ -45,7 +45,7 @@
 
 .name {
   text-align: center;
-  margin-bottom: 10px;
+  margin: 10px;
   font-size: 3vh;
 }
 
@@ -53,7 +53,7 @@
   display: flex;
   align-items: center;
   font-size: 2vh;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 .line > svg {
   margin-right: 10px;
